input[type=date]: Enlarge day fields if touch-enabled input devices are available.

* We haven't passed pointer type information to PagePopups.
* We should use any-pointer query, not pointer query.
 e.g. If the primary pointer is a mouse, and the device also has a touch-screen,
  day fields should be larger.

BUG=704850

Review-Url: https://codereview.chromium.org/2776663002
Cr-Commit-Position: refs/heads/master@{#459690}

Former-commit-id: 2e43cb93b5ab8a098a297d27b60d705076c1213c